--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,61 +3,164 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.beaumont.chrisj.bc_soloapp.MainActivity">
 
-    <RelativeLayout android:id="@+id/frame_takeoff"
+    <TableLayout android:id="@+id/frame_takeoff"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="visible">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_toLeftOf="@+id/space"
-            android:layout_toStartOf="@+id/space">
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" >
 
-            <Button
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:text="Connect"
-                android:textSize="30sp"
-                android:background="@drawable/rounded_button_conn"
-                android:layout_centerInParent="true"
-                android:id="@+id/btnTakeOff"
-                android:onClick="onBtnTakeOff"/>
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="1">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/activity_horizontal_margin"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Step 1:"
-                android:textSize="40sp"
-                android:id="@+id/lblStepCount"
-                android:layout_above="@+id/btnTakeOff"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                <Button
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_centerInParent="true"
+                    android:text="Connect"
+                    android:textSize="30sp"
+                    android:onClick="onTakeOffAction"
+                    android:background="@drawable/rounded_button_conn"
+                    android:id="@+id/btnConn" />
 
-        </RelativeLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/btnConn"
+                    android:layout_centerHorizontal="true"
+                    android:padding="50dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Step 1:"
+                    android:textSize="40sp" />
 
-        <FrameLayout
-            android:layout_width="5dp"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:background="#000"
-            android:id="@+id/space"/>
+                <ProgressBar
+                    android:id="@+id/spinner_conn"
+                    android:visibility="invisible"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:indeterminate="true"
+                    android:layout_below="@+id/btnConn"
+                    android:layout_centerHorizontal="true"
+                    android:padding="50dp"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_toRightOf="@id/space"
-            android:layout_toEndOf="@+id/space">
+                <ImageView
+                    android:id="@+id/tick_conn"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@+id/btnConn"
+                    android:layout_marginTop="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:visibility="invisible"
+                    android:src="@drawable/tick"/>
 
-        </RelativeLayout>
+            </RelativeLayout>
 
-    </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="1">
+
+                <Button
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_centerInParent="true"
+                    android:text="Arm"
+                    android:textSize="30sp"
+                    android:onClick="onTakeOffAction"
+                    android:background="@drawable/rounded_button_arm"
+                    android:id="@+id/btnArm" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/btnArm"
+                    android:layout_centerHorizontal="true"
+                    android:padding="50dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Step 2:"
+                    android:textSize="40sp"/>
+
+                <ProgressBar
+                    android:id="@+id/spinner_arm"
+                    android:visibility="invisible"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:indeterminate="true"
+                    android:layout_below="@+id/btnArm"
+                    android:layout_centerHorizontal="true"
+                    android:padding="50dp"/>
+
+                <ImageView
+                    android:id="@+id/tick_arm"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@+id/btnArm"
+                    android:layout_marginTop="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:visibility="invisible"
+                    android:src="@drawable/tick"/>
+
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="1">
+
+                <Button
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_centerInParent="true"
+                    android:text="Launch"
+                    android:textSize="30sp"
+                    android:onClick="onTakeOffAction"
+                    android:background="@drawable/rounded_button_takeoff"
+                    android:id="@+id/btnLaunch" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/btnLaunch"
+                    android:layout_centerHorizontal="true"
+                    android:padding="50dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Step 3:"
+                    android:textSize="40sp"/>
+
+                <ProgressBar
+                    android:id="@+id/spinner_launch"
+                    android:visibility="invisible"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:indeterminate="true"
+                    android:layout_below="@+id/btnLaunch"
+                    android:layout_centerHorizontal="true"
+                    android:padding="50dp"/>
+
+                <ImageView
+                    android:id="@+id/tick_launch"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@+id/btnLaunch"
+                    android:layout_marginTop="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:visibility="invisible"
+                    android:src="@drawable/tick"/>
+
+            </RelativeLayout>
+
+
+
+        </TableRow>
+
+    </TableLayout>
 </RelativeLayout>
