--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,20 +8,20 @@
     <FrameLayout android:id="@+id/frame_launch"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <include
             layout="@layout/layout_launch" />
 
     </FrameLayout>
 
-    <FrameLayout android:id="@+id/frame_controls"
+    <FrameLayout android:id="@+id/frame_flight"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible">
+        android:visibility="invisible">
 
         <include
-            layout="@layout/layout_controls" />
+            layout="@layout/layout_flight" />
 
     </FrameLayout>
 
