--- a/app/src/main/res/layout/layout_flight.xml
+++ b/app/src/main/res/layout/layout_flight.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <FrameLayout android:id="@+id/frame_controls"
-        android:layout_width="500dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignRight="@+id/space"
         android:layout_alignEnd="@+id/space"
@@ -13,6 +13,20 @@
 
         <include
             layout="@layout/layout_controls" />
+
+    </FrameLayout>
+
+    <FrameLayout android:id="@+id/frame_maps"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignRight="@+id/space"
+        android:layout_alignEnd="@+id/space"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:visibility="gone">
+
+        <include
+            layout="@layout/layout_maps" />
 
     </FrameLayout>
 
@@ -77,6 +91,45 @@
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/button"
             android:layout_toStartOf="@+id/button" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Follow me"
+            android:id="@+id/btnFollow"
+            android:layout_below="@+id/button"
+            android:layout_centerHorizontal="true"
+            android:onClick="onBtnFollow"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Map"
+            android:id="@+id/btnMaps"
+            android:layout_below="@+id/button2"
+            android:layout_toRightOf="@+id/btnFollow"
+            android:layout_toEndOf="@+id/btnFollow"
+            android:onClick="onBtnMap"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cirlce me"
+            android:id="@+id/btnCircleMe"
+            android:layout_below="@+id/button3"
+            android:layout_alignLeft="@+id/button3"
+            android:layout_alignStart="@+id/button3"
+            android:onClick="onBtnCircleMe"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Look at me"
+            android:id="@+id/btnLookAtMe"
+            android:layout_below="@+id/btnFollow"
+            android:layout_alignLeft="@+id/btnCircleMe"
+            android:layout_alignStart="@+id/btnCircleMe"
+            android:onClick="onBtnLookAtMe"/>
 
     </RelativeLayout>
 
