--- a/app/src/main/res/layout/layout_launch.xml
+++ b/app/src/main/res/layout/layout_launch.xml
@@ -1,155 +1,100 @@
-<TableLayout
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:baselineAligned="true"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal">
 
-    <TableRow
-        android:id="@+id/tableRow1"
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" >
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:gravity="center">
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/square"
+            android:adjustViewBounds="true"
+            android:id="@+id/imageView3" />
 
-            <Button
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_centerInParent="true"
-                android:text="Connect"
-                android:textSize="30sp"
-                android:onClick="onBtnConn"
-                android:background="@drawable/rounded_button_conn"
-                android:id="@+id/btnConn" />
+        <Button android:id="@+id/btnConn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/imageView3"
+            android:layout_alignTop="@+id/imageView3"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:background="@drawable/rounded_button_conn"
+            android:text="Connect"
+            android:textSize="60sp"
+            android:onClick="onBtnConn" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/btnConn"
-                android:layout_centerHorizontal="true"
-                android:padding="50dp"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Step 1:"
-                android:textSize="40sp" />
+    </RelativeLayout>
 
-            <ProgressBar
-                android:id="@+id/spinner_conn"
-                android:visibility="invisible"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:indeterminate="true"
-                android:layout_below="@+id/btnConn"
-                android:layout_centerHorizontal="true"
-                android:padding="50dp"/>
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:gravity="center">
 
-            <ImageView
-                android:id="@+id/tick_conn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_below="@+id/btnConn"
-                android:layout_marginTop="50dp"
-                android:layout_centerHorizontal="true"
-                android:visibility="invisible"
-                android:src="@drawable/tick"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/square"
+            android:adjustViewBounds="true"
+            android:id="@+id/imageView4" />
 
-        </RelativeLayout>
+        <Button android:id="@+id/btnArm"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/imageView4"
+            android:layout_alignTop="@+id/imageView4"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:background="@drawable/rounded_button_arm"
+            android:text="Arm"
+            android:textSize="60sp"
+            android:onClick="onBtnArm"/>
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1">
+    </RelativeLayout>
 
-            <Button
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_centerInParent="true"
-                android:text="Arm"
-                android:textSize="30sp"
-                android:onClick="onBtnArm"
-                android:background="@drawable/rounded_button_arm"
-                android:id="@+id/btnArm" />
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:gravity="center">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/btnArm"
-                android:layout_centerHorizontal="true"
-                android:padding="50dp"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Step 2:"
-                android:textSize="40sp"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/square"
+            android:adjustViewBounds="true"
+            android:id="@+id/imageView5" />
 
-            <ProgressBar
-                android:id="@+id/spinner_arm"
-                android:visibility="invisible"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:indeterminate="true"
-                android:layout_below="@+id/btnArm"
-                android:layout_centerHorizontal="true"
-                android:padding="50dp"/>
+        <Button android:id="@+id/btnLaunch"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/imageView5"
+            android:layout_alignTop="@+id/imageView5"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:background="@drawable/rounded_button_takeoff"
+            android:text="Take Off"
+            android:textSize="60sp"
+            android:onClick="onBtnLaunch"/>
 
-            <ImageView
-                android:id="@+id/tick_arm"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_below="@+id/btnArm"
-                android:layout_marginTop="50dp"
-                android:layout_centerHorizontal="true"
-                android:visibility="invisible"
-                android:src="@drawable/tick"/>
+    </RelativeLayout>
 
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1">
-
-            <Button
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_centerInParent="true"
-                android:text="Launch"
-                android:textSize="30sp"
-                android:onClick="onBtnLaunch"
-                android:background="@drawable/rounded_button_takeoff"
-                android:id="@+id/btnLaunch" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/btnLaunch"
-                android:layout_centerHorizontal="true"
-                android:padding="50dp"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Step 3:"
-                android:textSize="40sp"/>
-
-            <ProgressBar
-                android:id="@+id/spinner_launch"
-                android:visibility="invisible"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:indeterminate="true"
-                android:layout_below="@+id/btnLaunch"
-                android:layout_centerHorizontal="true"
-                android:padding="50dp"/>
-
-            <ImageView
-                android:id="@+id/tick_launch"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_below="@+id/btnLaunch"
-                android:layout_marginTop="50dp"
-                android:layout_centerHorizontal="true"
-                android:visibility="invisible"
-                android:src="@drawable/tick"/>
-
-        </RelativeLayout>
-    </TableRow>
-
-</TableLayout>
+</LinearLayout>
