--- a/app/src/main/res/layout/frame_options.xml
+++ b/app/src/main/res/layout/frame_options.xml
@@ -297,6 +297,7 @@
                     android:layout_gravity="center_horizontal">
 
                     <TextView
+                        android:id="@+id/skybox_height"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
