--- a/app/src/main/res/layout/frame_options.xml
+++ b/app/src/main/res/layout/frame_options.xml
@@ -298,9 +298,10 @@
 
                     <TextView
                         android:id="@+id/skybox_height"
-                        android:layout_width="wrap_content"
+                        android:layout_width="25dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
+                        android:gravity="end"
                         android:text="20"/>
 
                     <TextView
@@ -325,6 +326,7 @@
                     android:layout_gravity="center_horizontal">
 
                     <TextView
+                        android:id="@+id/skybox_width"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
