--- a/app/src/main/res/layout/frame_options.xml
+++ b/app/src/main/res/layout/frame_options.xml
@@ -340,14 +340,14 @@
 
                 </LinearLayout>
 
-                <CheckBox
+                <!--<CheckBox
                     android:id="@+id/chkBox_ButtonDisablement"
                     android:visibility="invisible"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="@dimen/activity_vertical_margin"
-                    android:text="Disable buttons when the drone reaches the edges"/>
+                    android:text="Hide buttons when the drone reaches the edges"/>-->
 
             </LinearLayout>
 
