--- a/app/src/main/res/layout/layout_controls.xml
+++ b/app/src/main/res/layout/layout_controls.xml
@@ -120,6 +120,12 @@
             android:layout_height="fill_parent"
             android:background="@drawable/border_controls">
 
+            <TextView
+                android:id="@+id/txtTest"
+                android:text="null"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
             <ImageView android:id="@+id/img_compass"
                 android:visibility="invisible"
                 android:layout_width="150dp"
